<resources>
    <string name="app_name">AutoCare \n2021</string>
    <string name="parola">Parola</string>
    <string name="username">Username</string>
    <string name="masini">Mașini</string>
    <string name="automobile">Automobile</string>
    <string name="nr_de_inmatriculare">Nr de Inmatriculare</string>
    <string name="marca">Marca</string>
    <string name="model">Model</string>
    <string name="an">An</string>
    <string name="combustibil">Combustibil</string>
    <string name="tip_utilizare">Tip utilizare</string>
    <string name="actualizare_km">Actualizare Km</string>
    <string name="credit">© AutoCare 2020</string>
    <string name="sterge">Sterge</string>
    <string name="adauga">Adauga</string>
    <string name="desc">desc</string>
    <string name="capacitate">Capacitatea Rezervorului</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus lacus elit, vel dapibus arcu malesuada lobortis. Maecenas maximus tincidunt rutrum. Ut ut maximus ligula. Cras elementum massa sed placerat pellentesque. Nunc sit amet est at libero ultrices vehicula. Integer id congue odio. Morbi ut faucibus nisl. Pellentesque ac aliquam lectus, a aliquam tortor. In aliquet hendrerit tellus non finibus. Morbi sodales nunc in nisi pulvinar, sed cursus odio laoreet. Integer a metus dictum, interdum neque sed, auctor sapien. Cras ullamcorper eros sodales, consequat eros at, ultricies urna. Vivamus imperdiet ac neque iaculis facilisis. Mauris hendrerit ornare lacus. Pellentesque pretium consequat odio in faucibus. Vivamus libero est, accumsan nec mauris vel, mollis bibendum nisi. Etiam pellentesque nulla nec dignissim posuere. Morbi velit nulla, lacinia at velit vitae, sollicitudin elementum sem. Aliquam facilisis, tortor sit amet hendrerit lobortis, ante justo vehicula orci, in ornare libero enim sed enim. Phasellus sit amet varius lacus. Praesent dictum elementum tellus a imperdiet. Mauris aliquam mi non est facilisis, ut tincidunt ex sagittis. Quisque ultrices risus sit amet sapien pharetra viverra. Suspendisse potenti. Aliquam dignissim nibh et diam consequat, vel porta arcu rhoncus. Quisque eget sapien ut felis tempus eleifend. Vivamus auctor risus metus, dictum mollis ipsum pharetra eu. Curabitur et porta eros, ut scelerisque ligula. Donec dignissim elit urna, eu convallis sem aliquam eu. Morbi non eleifend orci. Proin vitae lorem sem. Donec hendrerit ante commodo consequat porttitor. Vivamus sapien purus, scelerisque at placerat vel, scelerisque quis dolor. Fusce sit amet dolor nisl. Vivamus ut euismod ipsum, at dictum ante. Morbi eget pulvinar orci. Nullam non pretium ante. Sed eget mi vel tellus semper facilisis. Sed ullamcorper, felis ut placerat tincidunt, odio diam pellentesque ligula, ac malesuada purus ligula id nisi. Donec finibus, magna ac lobortis tempor, sem sapien iaculis felis, ornare pharetra felis eros eget tellus. Sed sit amet varius metus, vel viverra purus. Sed laoreet aliquet scelerisque. Praesent ac sapien ac nisi ullamcorper tincidunt. Nam dictum sapien non lacinia egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse auctor a quam vel efficitur. Donec vel ex consequat, viverra ligula a, iaculis urna. Nam dapibus maximus aliquam. Mauris dictum viverra faucibus. Ut mollis nibh eu enim elementum fringilla.</string>
    <string name="data">Data:</string>
    <string name="data1">Data</string>
    <string name="index_bord_citit">Index bord citit:</string>
    <string name="ora">Ora:</string>
    <string name="observatii">Observatii:</string>
    <string name="adaugati_aici_observatiile_dumneavoastra">Adaugati aici observatiile dumneavoastra</string>
    <string name="masina">Masina:</string>
    <string name="service">Service:</string>
    <string name="ce_s_a_reparat">Ce s-a reparat:</string>
    <string name="valoare">Valoare:</string>
    <string name="lei">Lei</string>
    <string name="bujii">Bujii:</string>
    <string name="filtre_de_aer">Filtre de Aer:</string>
    <string name="filtre_de_benzina">Filtre de Benzina:</string>
    <string name="rotoare">Rotoare:</string>
    <string name="schimb_de_ulei">Schimb de Ulei:</string>
    <string name="sofer">Sofer:</string>
    <string name="tip_de_autoturism">Tip de autoturism:</string>
    <string name="tip_motor">Tip motor:</string>
    <string name="greutate">Greutate:</string>
    <string name="asigurat">Asigurat:</string>
    <string name="conditiile_nmeteorologice">Conditiile \nMeteorologice</string>
    <string name="minima">Minima</string>
    <string name="maxima">Maxima</string>
    <string name="test">test</string>
    <string name="asigurare">Asigurare</string>
    <string name="actualizari_km">Actualizari Km</string>
    <string name="reparatii">Reparatii</string>
    <string name="revizii">Revizii</string>
    <string name="tine_minte_numele_de_utilizator">Tine minte numele de utilizator</string>
    <string name="plinuri">Plinuri</string>
    <string name="asigurare_casco">Asigurare/CASCO</string>
    <string name="rovinieta">Rovinieta</string>
    <string name="lukoil">Lukoil</string>
    <string name="rompetrol">Rompetrol</string>
    <string name="mol">Mol</string>
    <string name="mult">Rovinieta, sau taxa de drum, este o taxa platita de soferi pentru a avea dreptul de a circula pe reteaua de drumuri nationale din afara oraselor, sau in intravilanul resedintelor de judet si municipiilor.</string>
    <string name="data_incepere">Data incepere:</string>
    <string name="categorie_permis">Categorie Permis:</string>
    <string name="gabarit">Gabarit:</string>
    <string name="zone_de_circulatie">Zone de Circulatie:</string>
</resources>