<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main6clase.MainReparatii">


    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="339dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tvCredit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRepMasina"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/masina" />

            <EditText
                android:id="@+id/etRepMasina"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRepData"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/data" />

            <EditText

                android:id="@+id/etRepData"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvService"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/service" />

            <EditText
                android:id="@+id/etService"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="40dp" />


        </LinearLayout>


        <TextView
            android:id="@+id/tvRepObs"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:gravity="bottom"
            android:text="@string/ce_s_a_reparat" />

        <EditText
            android:id="@+id/etRepObs"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/adaugati_aici_observatiile_dumneavoastra" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRepValoare"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valoare" />

            <EditText
                android:id="@+id/etRepValoare"
                style="@style/hintRed"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:text="@string/lei"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/tvStyle6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/reparatii"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btAdaugaReparatii"
        android:layout_width="133dp"
        android:layout_height="66dp"
        android:background="@drawable/button"
        android:text="@string/adauga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/tvCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/credit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />
</androidx.constraintlayout.widget.ConstraintLayout>