<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main6clase.MainKm">

    <TextView
        android:id="@+id/textViewKm"
        style="@style/tvStyle6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizare_km"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="339dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tvCredit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDataKm"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/data" />

            <EditText
                android:id="@+id/etDataKm"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOraKm"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/ora" />

            <EditText
                android:id="@+id/etOraKm"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIndexKm"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/index_bord_citit" />

            <EditText
                android:id="@+id/etIndexKm"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvObsKm"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:gravity="bottom"
            android:text="@string/observatii" />

        <EditText
            android:id="@+id/etObsKm"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/adaugati_aici_observatiile_dumneavoastra" />

    </LinearLayout>

    <Button
        android:id="@+id/btAdaugaKm"
        android:layout_width="133dp"
        android:layout_height="66dp"
        android:background="@drawable/button"
        android:text="@string/adauga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <TextView
        android:id="@+id/tvCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/credit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />
</androidx.constraintlayout.widget.ConstraintLayout>