<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNumeAdapterRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test"
        android:textSize="30dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAdapterMasinaRep"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/masina"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAdapterMasinaRep1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAdapterDataRep"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/data"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAdapterDataRep1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAdapterServRep"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/service"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAdapterServRep1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAdapterObsRep"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/ce_s_a_reparat"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAdapterObsRep1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:hint="@string/adaugati_aici_observatiile_dumneavoastra"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAdapterValoareRep"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/valoare"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/tvAdapterValoareRep1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="15dp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lei"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>