<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main6clase.MainRevizii">


    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="340dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tvCredit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBujii"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/bujii" />

            <EditText
                android:id="@+id/etBujii"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFiltreAer"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/filtre_de_aer" />

            <EditText
                android:id="@+id/etFiltreAer"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFiltreBenzina"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/filtre_de_benzina" />

            <EditText
                android:id="@+id/etFiltreBenzina"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRotor"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/rotoare" />

            <EditText
                android:id="@+id/etRotor"
                style="@style/hintRed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSchimbUlei"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/schimb_de_ulei" />

            <Switch
                android:id="@+id/swSchimbUlei"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        style="@style/tvStyle6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revizii"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/btAdaugaRevizie"
        android:layout_width="133dp"
        android:layout_height="66dp"
        android:background="@drawable/button"
        android:text="@string/adauga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/tvCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/credit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />
</androidx.constraintlayout.widget.ConstraintLayout>